--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -1,9 +1,214 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.homepage.components.activity.productdetail.ProductDetailActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/abl_toolbar_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/transparant"
+        app:elevation="0dp">
+
+        <include
+            android:id="@+id/banner_item_list_toolbar"
+            layout="@layout/product_detail_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_scrollFlags="scroll|enterAlways" />
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/abl_toolbar_list"
+        android:layout_above="@id/keranjang_button_container">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/appBackground">
+
+            <com.smarteist.autoimageslider.SliderView
+                android:id="@+id/image_slider"
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:background="@color/white"
+                app:sliderAnimationDuration="600"
+                app:sliderIndicatorUnselectedColor="@color/gray"
+                app:sliderIndicatorSelectedColor="@color/red"/>
+
+            <RelativeLayout
+                android:id="@+id/rl_nama_product"
+                android:layout_marginVertical="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/image_slider"
+                android:background="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="15dp">
+
+                <TextView
+
+                    android:id="@+id/tv_stok_from"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="5dp"
+                    tools:text="Stok dari Toko"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/stok_toko" />
+
+                <TextView
+                    android:id="@+id/tv_nama_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_stok_from"
+                    android:layout_marginVertical="15dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    tools:text="Indomie Goreng\nenak enak enak"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tv_harga_diskon_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_nama_product"
+                    android:layout_marginEnd="5dp"
+                    tools:text="Rp 5000"
+                    android:textColor="@color/gray"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/tv_diskon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_nama_product"
+                    android:layout_toEndOf="@id/tv_harga_diskon_product"
+                    android:background="@drawable/card_product_detail"
+                    android:paddingHorizontal="8dp"
+                    android:paddingVertical="5dp"
+                    tools:text="13%"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tv_harga_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_diskon"
+                    android:layout_marginVertical="5dp"
+                    tools:text="Rp. 50.000"
+                    android:textColor="@color/red"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@color/white"
+                android:paddingVertical="6dp"
+                android:paddingHorizontal="15dp">
+
+                <TextView
+                    android:id="@+id/tv_title_penngiriman"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/pengiriman"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <ImageView
+                    android:id="@+id/iv_delivery_icon"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/delivery_motorycyle"
+                    android:layout_marginTop="5dp"
+                    app:layout_constraintTop_toBottomOf="@id/tv_title_penngiriman"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:rotationY="180"/>
+
+                <TextView
+                    android:id="@+id/tv_sapa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sapa_instant_delivery"
+                    android:layout_marginStart="10dp"
+                    app:layout_constraintTop_toTopOf="@id/iv_delivery_icon"
+                    app:layout_constraintStart_toEndOf="@id/iv_delivery_icon"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/bebas_ongkir"
+                    app:layout_constraintTop_toBottomOf="@id/tv_sapa"
+                    app:layout_constraintStart_toStartOf="@id/tv_sapa"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <RelativeLayout
+                app:layout_constraintTop_toBottomOf="@id/rl_nama_product"
+                android:id="@+id/rl_deskripsi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:padding="15dp">
+
+                <TextView
+                    android:id="@+id/tv_judul_deskripsi"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:text="@string/deskripsi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/tv_deskripsi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_judul_deskripsi"
+                    android:layout_marginVertical="10dp"
+                    tools:text="dwanodnawoidnawoidnawoidnaiowdnaoiwndaiwodnaiwodnaiowdadoandawdiwodnoadnandoaiwndoandoaind" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/keranjang_button_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/appBackground"
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:layout_alignParentBottom="true">
+
+        <Button
+            android:id="@+id/bt_keranjang_button"
+            app:backgroundTint="@null"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/detail_button_background"
+            android:text="@string/keranjang_button"
+             />
+
+    </LinearLayout>
+
+
+</RelativeLayout>
