--- a/app/src/main/res/layout/fragment_belanja.xml
+++ b/app/src/main/res/layout/fragment_belanja.xml
@@ -6,6 +6,21 @@
     android:layout_height="match_parent"
     android:background="@color/very_light_gray">
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_produk_rekomendasi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/shape_product_categories"
+        android:backgroundTint="@color/white"
+        android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24_blue"
+        android:paddingHorizontal="20dp"
+        android:text="Produk rekomendasi untuk anda"
+        android:textAllCaps="false"
+        android:textColor="@color/teal"
+        android:visibility="visible" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
@@ -180,23 +195,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cl_shopping_list"
                 tools:listitem="@layout/item_produk_belanja" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_produk_rekomendasi"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/shape_product_categories"
-                android:backgroundTint="@color/white"
-                android:drawableEnd="@drawable/baseline_keyboard_arrow_down_24_blue"
-                android:paddingHorizontal="20dp"
-                android:text="Produk rekomendasi untuk anda"
-                android:textAllCaps="false"
-                android:textColor="@color/teal"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
