--- a/app/src/main/res/layout/beranda_toolbar.xml
+++ b/app/src/main/res/layout/beranda_toolbar.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:text="Hai, Made" />
+        android:text="@string/toolbar_greeting" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:visibility="gone"
