--- a/app/src/main/res/layout/item_submenu_pesanan.xml
+++ b/app/src/main/res/layout/item_submenu_pesanan.xml
@@ -4,13 +4,15 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="">
+    android:background="@drawable/shape_submenu_pesanan_item"
+    android:layout_margin="10dp">
     <TextView
         android:id="@+id/tv_submenu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:text="submenu title"
         android:textColor="@color/white"
+        android:layout_margin="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
