--- a/app/src/main/res/drawable/shape_submenu_pesanan_item.xml
+++ b/app/src/main/res/drawable/shape_submenu_pesanan_item.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android">-->
+<!--    <gradient-->
+<!--        android:startColor="@color/teal"-->
+<!--        android:endColor="@color/sky_blue"-->
+<!--        />-->
+<!--    <corners android:radius="15dp"/>-->
+<!--</shape>-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:startColor="@color/teal"
-        android:endColor="@color/sky_blue"
-        />
-    <corners android:radius="15dp"/>
+    <solid android:color="@color/white"/>
+    <stroke android:width="1dp" android:color="@color/teal"/>
+    <corners android:radius="99dp"/>
 </shape>
