--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -6,8 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".presentation.homepage.components.activity.productdetail.ProductDetailActivity">
 
+
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/abl_toolbar_list"
+        android:id="@+id/pdl_toolbar_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/transparant"
@@ -25,7 +26,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/abl_toolbar_list"
+        android:layout_below="@id/pdl_toolbar_list"
         android:layout_above="@id/keranjang_button_container">
 
         <LinearLayout
@@ -35,7 +36,7 @@
             android:background="@color/appBackground">
 
             <com.smarteist.autoimageslider.SliderView
-                android:id="@+id/image_slider"
+                android:id="@+id/product_image_slider"
                 android:layout_width="match_parent"
                 android:layout_height="280dp"
                 android:background="@color/white"
@@ -44,7 +45,7 @@
                 app:sliderIndicatorSelectedColor="@color/red"/>
 
             <RelativeLayout
-                android:id="@+id/rl_nama_product"
+                android:id="@+id/rl_product_info"
                 android:layout_marginVertical="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/image_slider"
                 android:background="@color/white"
@@ -78,7 +79,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tv_harga_diskon_product"
+                    android:id="@+id/tv_harga_product_secondary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_nama_product"
@@ -88,11 +89,11 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/tv_diskon"
+                    android:id="@+id/tv_diskon_percentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_nama_product"
-                    android:layout_toEndOf="@id/tv_harga_diskon_product"
+                    android:layout_toEndOf="@id/tv_harga_product_secondary"
                     android:background="@drawable/card_product_detail"
                     android:paddingHorizontal="8dp"
                     android:paddingVertical="5dp"
@@ -101,10 +102,10 @@
                     android:textSize="12sp" />
 
                 <TextView
-                    android:id="@+id/tv_harga_product"
+                    android:id="@+id/tv_harga_product_primary"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_diskon"
+                    android:layout_below="@id/tv_diskon_percentage"
                     android:layout_marginVertical="5dp"
                     tools:text="Rp. 50.000"
                     android:textColor="@color/red"
@@ -121,7 +122,7 @@
                 android:paddingHorizontal="15dp">
 
                 <TextView
-                    android:id="@+id/tv_title_penngiriman"
+                    android:id="@+id/tv_title_pengiriman"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/pengiriman"
@@ -136,7 +137,7 @@
                     android:layout_height="48dp"
                     android:src="@drawable/delivery_motorycyle"
                     android:layout_marginTop="5dp"
-                    app:layout_constraintTop_toBottomOf="@id/tv_title_penngiriman"
+                    app:layout_constraintTop_toBottomOf="@id/tv_title_pengiriman"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:rotationY="180"/>
@@ -160,7 +161,7 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <RelativeLayout
-                app:layout_constraintTop_toBottomOf="@id/rl_nama_product"
+                app:layout_constraintTop_toBottomOf="@id/rl_product_info"
                 android:id="@+id/rl_deskripsi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -177,12 +178,12 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
-                    android:id="@+id/tv_deskripsi"
+                    android:id="@+id/tv_deskripsi_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_judul_deskripsi"
                     android:layout_marginVertical="10dp"
-                    tools:text="dwanodnawoidnawoidnawoidnaiowdnaoiwndaiwodnaiwodnaiowdadoandawdiwodnoadnandoaiwndoandoaind" />
+                    tools:text="awokwowokwwwkowkowkwokwokwowokwwkokowkowkkwoowo" />
 
             </RelativeLayout>
 
