--- a/app/src/main/res/layout/item_product_gratis_product.xml
+++ b/app/src/main/res/layout/item_product_gratis_product.xml
@@ -94,7 +94,7 @@
             tools:text="Indomie Goreng\nenak enak enak" />
 
         <TextView
-            android:id="@+id/tv_harga_product"
+            android:id="@+id/tv_harga_product_primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="5dp"
@@ -115,7 +115,7 @@
             android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_harga_product"
+            app:layout_constraintTop_toBottomOf="@id/tv_harga_product_primary"
             tools:text="27%" />
 
         <TextView
@@ -126,7 +126,7 @@
             android:layout_marginTop="12dp"
             android:textColor="@color/very_light_gray"
             app:layout_constraintStart_toEndOf="@id/tv_jumlah_diskon"
-            app:layout_constraintTop_toBottomOf="@id/tv_harga_product"
+            app:layout_constraintTop_toBottomOf="@id/tv_harga_product_primary"
             tools:text="Rp 5000" />
 
         <TextView
