--- a/app/src/main/res/layout/item_product_tebus_murah.xml
+++ b/app/src/main/res/layout/item_product_tebus_murah.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@id/tv_stock_from" />
 
     <TextView
-        android:id="@+id/tv_harga_product"
+        android:id="@+id/tv_harga_product_primary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -68,14 +68,14 @@
         android:text="Rp.8000"
         android:textColor="@color/gray"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_harga_product"
-        app:layout_constraintLeft_toRightOf="@id/tv_harga_product"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_harga_product_primary"
+        app:layout_constraintLeft_toRightOf="@id/tv_harga_product_primary"
         app:layout_constraintTop_toBottomOf="@id/tv_nama_product" />
 
     <com.google.android.material.divider.MaterialDivider
         app:dividerColor="@color/gray"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_harga_product"
+        app:layout_constraintTop_toBottomOf="@id/tv_harga_product_primary"
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
 
