--- a/app/src/main/res/layout/fragment_harga_special.xml
+++ b/app/src/main/res/layout/fragment_harga_special.xml
@@ -3,26 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".presentation.homepage.fragment.FragmentPromo">
+    tools:context=".presentation.homepage.components.fragment.productlist.FragmentHargaSpecial">
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
+        android:id="@+id/tl_harga_special"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        app:tabIndicator="@drawable/tab_indicator_fragment_promo"
-        app:tabIndicatorAnimationMode="elastic"
-        app:tabIndicatorColor="@color/teal"
-        app:tabIndicatorGravity="stretch"
-        app:tabMode="scrollable"
-        app:tabSelectedTextColor="@color/white"
-        app:textAllCaps="false" />
+        app:tabMode="fixed" />
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
