--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -81,12 +81,20 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_kirim_ke" />
 
             <FrameLayout
-                android:id="@+id/fl_product_categories"
+                android:id="@+id/fl_banner_slider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_search_product" />
+
+            <FrameLayout
+                android:id="@+id/fl_product_categories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/fl_banner_slider" />
 
             <FrameLayout
                 android:id="@+id/fl_official_store"
