fragment promo naruh product list selesai kyknya

--- a/app/src/main/res/layout/fragment_harga_special.xml
+++ b/app/src/main/res/layout/fragment_harga_special.xml
@@ -14,8 +14,8 @@
         app:tabMode="fixed" />
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/container_fragment_special"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
