--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         style="@style/Edit_Text_Container_Style"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="top">
 
         <TextView
             android:id="@+id/tv_OTP_Title"
@@ -18,6 +19,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
             android:text="Verify OTP"
+            android:textColor="@color/gray"
             android:textSize="32sp"
             android:textStyle="bold" />
 
@@ -28,6 +30,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="60dp"
             android:text="@string/send_otp_code"
+            android:textColor="@color/gray"
             android:textSize="16sp" />
 
         <com.chaos.view.PinView
