--- a/app/src/main/res/layout/fragment_product_categories.xml
+++ b/app/src/main/res/layout/fragment_product_categories.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginVertical="20sp"
+        android:layout_marginVertical="10dp"
         android:text="@string/categories"
         android:textColor="@color/black"
         android:textSize="18sp"
