--- a/app/src/main/res/layout/item_banner_list.xml
+++ b/app/src/main/res/layout/item_banner_list.xml
@@ -12,9 +12,9 @@
         android:layout_height="wrap_content">
 
         <ImageView
-        android:id="@+id/iv_banner_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/iv_banner_list_image"
+        android:layout_width="320dp"
+        android:layout_height="160dp"
         tools:src="@drawable/banner_placeholder"
         android:scaleType="fitXY"/>
 
