--- a/app/src/main/res/layout/item_product_gratis_product.xml
+++ b/app/src/main/res/layout/item_product_gratis_product.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_produkList"
-    android:layout_width="match_parent"
+    android:layout_width="200dp"
     android:layout_height="370dp"
     android:layout_gravity="center"
     android:layout_margin="12dp"
@@ -12,7 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rl_product"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="370dp"
         android:paddingHorizontal="5dp">
 
@@ -29,54 +29,54 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:paddingRight="10dp"
-            android:background="@drawable/shape_gratis_product"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/ll_product_gratis"
-            app:layout_constraintTop_toBottomOf="@+id/iv_image"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/shape_gratis_product"
             android:orientation="horizontal"
-            android:layout_height="wrap_content">
+            android:paddingRight="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_image">
 
             <TextView
                 android:id="@+id/tv_gratis"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:drawablePadding="10dp"
-                android:padding="5dp"
-                android:textStyle="bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:background="@drawable/shape_gratis"
                 android:drawableStart="@drawable/baseline_card_giftcard_24"
-                android:textColor="@color/white"
+                android:drawablePadding="10dp"
+                android:padding="5dp"
                 android:text="Gratis"
+                android:textColor="@color/white"
                 android:textSize="16sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/civ_produk_gratis"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/tv_gratis"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="7dp"
                 android:src="@drawable/uniliver_logo"
                 app:civ_border_color="@color/gray"
                 app:civ_border_width="1dp"
                 app:civ_circle_background_color="@color/white"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
+                app:layout_constraintLeft_toRightOf="@id/tv_gratis"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/civ_produk_gratis_lebih"
-                app:layout_constraintLeft_toRightOf="@id/civ_produk_gratis"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:src="@drawable/baseline_plus_one_24"
                 app:civ_border_color="@color/gray"
                 app:civ_border_width="1dp"
                 app:civ_circle_background_color="@color/white"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
+                app:layout_constraintLeft_toRightOf="@id/civ_produk_gratis"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
